--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
     font-size: 62.5%;
     font-family: 'Montserrat', sans-serif;
     display: flex;
@@ -17,6 +15,7 @@ body {
 h1 {
     margin: 20px;
     font-size: 2rem;
+    text-align: center;
 }
 
 .main_container {
@@ -30,17 +29,43 @@ h1 {
 
 .container {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.image{
+    width: 100%;
+    height: 100%;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.photo {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .photo_header {
-    width: 658px;
-    height: 60px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 0 20px 0 20px;
-    margin-top: 40px; 
-    background-color: white;   
+}
+
+.photo_header,
+.text {
+    background-color: white;
+    padding: 10px;
+}
+
+.photo_header {
+    margin-top: 30px;
 }
 
 .photo_header p:nth-child(1){
@@ -53,25 +78,12 @@ h1 {
     opacity: 0.5;
 }
 
-.image {
-    width: 658px;
-    height: 450px;
-}
-
-.image img {
+.text {
     width: 100%;
     height: 100%;
-    object-fit: cover;
-}
-
-.text {
-    width: 658px;
-    height: 70px;
     font-size: 0.8rem;
     background-color: white;
     text-align: start;
     display: grid;
     place-content: center;
-    padding: 0 20px 0 25px;
-    margin-bottom: 30px;
 }
